src/style/sections/_about.scss
#about {
  background-color: $darkest-purple-color;
  color: $white-color;
  height: 100vh;
  border-top: 0px;
  // -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
  // clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
  padding-bottom: 10%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-top: 20em;

  @include respond(tab-land) {
    height: 100%;
    -webkit-clip-path: none;
    clip-path: none;
    padding-top: 10em;
  }

  .container {
    max-width: 1000px;

    @include respond(phone) {
      padding: 0;
    }
  }

  .about-me-flex-container {
    display: flex;
    flex-direction: column;
  }

  .about-wrapper {
    display: flex;
    flex-direction: row;

    @include respond(tab-port) {
      flex-direction: column;
    }

    @include respond(phone) {
    }

    .gatsby-image-wrapper {
      height: 539px !important;
    }

    .section-title {
      background-color: $medium-purple-color;
      box-shadow: -3px 3px 0 0 $light-purple-color;
      width: 100%;
    }

    &__image {
      display: flex;
      height: 100%;
      align-items: center;
      justify-content: center;

      @include respond(tab-port) {
        padding-bottom: 6.4rem;
        display: none;
      }
      @include respond(tab-land) {
        height: 100%;
      }
    }

    &__info {
      display: flex;
      height: 100%;
      justify-content: center;
      flex-direction: column;
      background-color: black;
      padding: 4em 3em;

      @include respond(phone) {
        align-items: center;
      }

      &-text {
        text-align: left;

        @include respond(tab-port) {
          font-size: 1.5rem;
        }
        @include respond(phone) {
          font-size: 1.6rem;
        }

        &--important {
          background: darken($secondary-color, 1%);
          display: inline-block;
          font-style: italic;
          padding: 0 0.3rem;
          margin: 0.3rem 0;
          line-height: 1.6;

          @include respond(phone) {
            display: inline;
            margin: 0;
            padding: 0;
            background: transparent;
            font-style: normal;
          }
        }
      }
    }
  }
}

.palette-rect {
  width: 100%;
  height: 3em;
  box-shadow: 0em 0.25em 0.5em 0em #12071d;
}

.dark {
  background-color: $dark-purple-color;
}

.medium {
  background-color: $medium-purple-color;
}

.light {
  background-color: $light-purple-color;
}

